tests/machine/x/rust/values_builtin.error
line 0: compile: exit status 1
error[E0425]: cannot find function `values` in this scope
 --> /workspace/mochi/tests/machine/x/rust/values_builtin.rs:3:22
  |
3 |     println!("{:?}", values(m));
  |                      ^^^^^^ not found in this scope
  |
help: use the `.` operator to call the method `values` on `&HashMap<&str, {integer}>`
  |
3 -     println!("{:?}", values(m));
3 +     println!("{:?}", m.values());
  |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.

fn main() {
